Require clientId and clientSecret
Now necessary for exchanging an accessCode for a idToken. This
prevents anyone getting a token for use with Stroom.
